Specifically prohibited the mutual containment of a parent UMLListViewItem by a child UMLListViewItem.

This prevents a freeze and an eventual crash from the recursive calling of UMLListViewItem::deepCopy.
from the recursive calling of UMLListViewItem::deepCopy.

BUG:321533
FIXED-IN:2.15.85 (KDE 15.03.85)